Revision history for Data-Verifier

{{$NEXT}}
  * Fix error prevent proper verification of dependents when using ArrayRef
    types. (bokutin)
  * Document verify method.

0.49 Jul 9 2011
  * Fix missing Prereqs

0.48 Jul 9 2011
  * Use GPHAT dzil bundle

0.47 Jun 10 2011
  * Moving skip_string_checks down to where it should be, fixing weird bugs
    in repeated use of a verifier profile. (jshirley)

0.46 May 7 2011
  * Allow parameters to be HashRef[Str].  This lets you use nested parameters
    (foo.bar.baz) without.  Filters have also been modified to not assume all
    references are arrays.
  * Add support for parameterized arrays, where each value of an array with
    a type is checked.  See Data::Verifier's POD.

0.45 Feb 23 2011
  * Document merge method

0.44 Feb 23 2011
  * Use Pod::Weaver

0.43 Jan 23 2011
  * Various fixes to the synopses
  * More dzil love

0.42      2011-01-23 09:37:12 America/Chicago
  * Add Git::Commit to make the Changes not be stale
  * Make JSON::XS a dep to get tests passing (Thanks ANDK!)

0.41      2011-01-23 09:28:00 America/Chicago
  * Use Dist::Zilla
  * Fix POD error
  * Add get_values to Results (Jason May)

0.40 Jan 17, 2010
  * Fix typo in POD (Jason May)

0.39 Jan 3, 2010
  * Add JSON::Any to test_requires

0.38
  * Add is_wrong predicate to Results object
  * Document the internals of Results
  * Add a has_field to Results
  * is_missing no longer returns true for arbitrary field names
  * Add many more tests to the default case

0.37
  * Don't dereference ArrayRef values with a single member. (Dennis Schön,
    RT #60425)

0.36
  * Don't die by attempting to cram a non-arrayref-ref into an array-ref.

0.35
  * Point out that D:V stops processing on the first failure

0.34    Jul 13, 2010
  * Allow the data passed into verify to be an object rather than just a
    HashRef (George Hartzell)

0.33    Jul 9, 2010
  * Match what the documentation says and allow the value of "filters" to be